@@ -12,6 +12,7 @@ BUG: Ticket#549 - set/get Timestamp on TDatePicker shound handle "null" values (
 BUG: Ticket#550 - explicitly include TCallbackClientSide in TCallbackOptions (Qiang)
 BUG: Ticket#553 - I18N quickstart sample does not work (Qiang)
 BUG: Ticket#555 - TNumberFormat throws exception (Qiang)
+BUG: Ticket#557 - TAutoComplete is not fool-proof (Wei)
 BUG: Ticket#560 - TActiveImageButton broken (Postback instead of Callback) (Wei)
 BUG: Ticket#573 - NumberFormat Bug (Wei)
 BUG: Ticket#579 - The rating list lost its Javascript in changeset [1775] (Wei).
